--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="style/style.css">
+	<link rel="stylesheet" href="style/max-width.css">
 	<title>Document</title>
 </head>
 <body>
@@ -17,8 +18,9 @@
 				<div class="teks">
 					<h1>GUNUNG BATUR</h1>
 					<p>
-						Lorem, ipsum, dolor sit amet consectetur adipisicing elit. Hic, ipsam. Aspernatur fugit, dolore fuga. Nobis omnis eveniet ad atque non, accusantium illo eius quas aspernatur maxime iste deleniti sapiente minima?
+						Lorem, ipsum, dolor sit amet consectetur adipisicing elit. Hic, ipsam. Aspernatur fugit, dolore fuga. Nobis omnis eveniet ad atque non, accusantium illo eius quas aspernatur maxime iste deleniti sapiente minima?Lorem, ipsum, dolor sit amet consectetur adipisicing elit. Hic, ipsam. Aspernatur fugit, dolore fuga. Nobis omnis eveniet ad atque non, accusantium illo eius quas aspernatur maxime iste deleniti sapiente minima?
 					</p>
+					<a href="#">Read More > </a>
 				</div>
 			</div>
 			<!-- bagiain 2 -->
@@ -31,6 +33,7 @@
 					<p>
 						Lorem, ipsum, dolor sit amet consectetur adipisicing elit. Hic, ipsam. Aspernatur fugit, dolore fuga. Nobis omnis eveniet ad atque non, accusantium illo eius quas aspernatur maxime iste deleniti sapiente minima?
 					</p>
+					<a href="#">Read More > </a>
 				</div>
 			</div>
 			<!-- bagian 3 -->
@@ -43,6 +46,7 @@
 					<p>
 						Lorem, ipsum, dolor sit amet consectetur adipisicing elit. Hic, ipsam. Aspernatur fugit, dolore fuga. Nobis omnis eveniet ad atque non, accusantium illo eius quas aspernatur maxime iste deleniti sapiente minima?
 					</p>
+					<a href="#">Read More > </a>
 				</div>
 			</div>
 		</div>
