Menambah sebuah font dan menempaktannya di berbagai teks dan juga memberikan dokumtasi singkat

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<p>
 						Lorem, ipsum, dolor sit amet consectetur adipisicing elit. Hic, ipsam. Aspernatur fugit, dolore fuga. Nobis omnis eveniet ad atque non, accusantium illo eius quas aspernatur maxime iste deleniti sapiente minima?Lorem, ipsum, dolor sit amet consectetur adipisicing elit. Hic, ipsam. Aspernatur fugit, dolore fuga. Nobis omnis eveniet ad atque non, accusantium illo eius quas aspernatur maxime iste deleniti sapiente minima?
 					</p>
-					<a href="#">Read More > </a>
+					<a href="#">Read More </a> >
 				</div>
 			</div>
 			<!-- bagiain 2 -->
@@ -33,7 +33,7 @@
 					<p>
 						Lorem, ipsum, dolor sit amet consectetur adipisicing elit. Hic, ipsam. Aspernatur fugit, dolore fuga. Nobis omnis eveniet ad atque non, accusantium illo eius quas aspernatur maxime iste deleniti sapiente minima?
 					</p>
-					<a href="#">Read More > </a>
+					<a href="#">Read More </a> >
 				</div>
 			</div>
 			<!-- bagian 3 -->
@@ -46,7 +46,7 @@
 					<p>
 						Lorem, ipsum, dolor sit amet consectetur adipisicing elit. Hic, ipsam. Aspernatur fugit, dolore fuga. Nobis omnis eveniet ad atque non, accusantium illo eius quas aspernatur maxime iste deleniti sapiente minima?
 					</p>
-					<a href="#">Read More > </a>
+					<a href="#">Read More </a> >
 				</div>
 			</div>
 		</div>
