--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<!-- 
+	untuk deskripsi bisa di ubah 
+
+ -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,7 +22,9 @@
 				<div class="teks">
 					<h1>GUNUNG BATUR</h1>
 					<p>
-						Lorem, ipsum, dolor sit amet consectetur adipisicing elit. Hic, ipsam. Aspernatur fugit, dolore fuga. Nobis omnis eveniet ad atque non, accusantium illo eius quas aspernatur maxime iste deleniti sapiente minima?Lorem, ipsum, dolor sit amet consectetur adipisicing elit. Hic, ipsam. Aspernatur fugit, dolore fuga. Nobis omnis eveniet ad atque non, accusantium illo eius quas aspernatur maxime iste deleniti sapiente minima?
+						Gunung Batur merupakan puncak dari Gunung Mahameru yang dipindahkan Batara Pasupati untuik dijadikan Sthana Betari Danuh (istana Dewi Danu). Pada waktu tertentu, seluruh umat Hindu dari berbagai daerah di Bali datang ke Batur menghaturkan Suwinih untuk mengusir bencana hama yang menimpa ladang mereka. Dengan menghantarkan suminih ini maka kawasan gunung Batur menjadi daerah yang subur.
+
+						Daerah yang dapat ditonjolkan sebagai objek wisata adalah kawah, kaldera dan danau. Terdapat aliran air dalam tanah yang mengalirkan air Danau Batur, yang muncul menjadi mata air di beberapa tempat di Bali dan dianggap sebagai "Tirta Suci"
 					</p>
 					<a href="#">Read More </a> >
 				</div>
@@ -31,7 +37,7 @@
 				<div class="teks">
 					<h1>GUNUNG BROMO</h1>
 					<p>
-						Lorem, ipsum, dolor sit amet consectetur adipisicing elit. Hic, ipsam. Aspernatur fugit, dolore fuga. Nobis omnis eveniet ad atque non, accusantium illo eius quas aspernatur maxime iste deleniti sapiente minima?
+							sebuah gunung berapi aktif di Jawa Timur, Indonesia. Gunung ini memiliki ketinggian 2.329 meter di atas permukaan laut dan berada dalam empat wilayah kabupaten, yakni Kabupaten Probolinggo, Kabupaten Pasuruan, Kabupaten Lumajang, dan Kabupaten Malang. Gunung Bromo terkenal sebagai objek wisata utama di Jawa Timur. Sebagai sebuah objek wisata, Bromo menjadi menarik karena statusnya sebagai gunung berapi yang masih aktif. Gunung Bromo termasuk dalam kawasan Taman Nasional Bromo Tengger Semeru.
 					</p>
 					<a href="#">Read More </a> >
 				</div>
@@ -44,7 +50,9 @@
 				<div class="teks">
 					<h1>GUNUNG RINJANI</h1>
 					<p>
-						Lorem, ipsum, dolor sit amet consectetur adipisicing elit. Hic, ipsam. Aspernatur fugit, dolore fuga. Nobis omnis eveniet ad atque non, accusantium illo eius quas aspernatur maxime iste deleniti sapiente minima?
+						Gunung Rinjani dengan titik tertinggi 3.726 m dpl, mendominasi sebagian besar pemandangan Pulau Lombok bagian utara.
+
+						Di sebelah barat kerucut Rinjani terdapat kaldera dengan luas sekitar 3.500 m × 4.800 m, memanjang kearah timur dan barat. Di kaldera ini terdapat Segara Anak (segara= laut, danau) seluas 11.000.000 m persegi dengan kedalaman 230 m. Air yang mengalir dari danau ini membentuk air terjun yang sangat indah, mengalir melewati jurang yang curam. Di Segara Anak banyak terdapat ikan mas dan mujair sehingga sering digunakan untuk memancing. Bagian selatan danau ini disebut dengan Segara Endut.
 					</p>
 					<a href="#">Read More </a> >
 				</div>
