--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!-- 
-	untuk deskripsi bisa di ubah 
-
+	untuk deskripsi bisa di ubah
  -->
 <!DOCTYPE html>
 <html lang="en">
@@ -9,10 +8,33 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="style/style.css">
 	<link rel="stylesheet" href="style/max-width.css">
-	<title>Document</title>
+	<title>MOUNTAINERING</title>
 </head>
 <body>
-	<!-- main -->
+	 <header>
+      <div class="container">
+        <div class="header-left">
+           <div class="header-logo">MOUNTAINERING</div>
+        </div>
+ 
+        <div class="header-right">
+          <a href="#">ABOUT US</a>
+          <a href="#">GALLERY</a>
+          <a href="#">BLOG</a>
+          <a href="#">SEARCH</a>
+          <a href="#" class="login">LOG IN</a>
+        </div>
+      </div>
+    </header>
+    <div class="top-wrapper">
+      <div class="container-top">
+        <h1>GUIDE YOUR TRAVEL,</h1>
+        <h1>NEVER STOP EXPLORING.</h1>
+        <p>“ Travel makes one modest. You see what a tiny place you occupy in the world. ”</p>
+      </div>
+    </div>
+    
+	<!-- main body -->
 	<div class="container">
 		<div class="main">
 			<div class="card bagian1">
@@ -24,7 +46,7 @@
 					<p>
 						Gunung Batur merupakan puncak dari Gunung Mahameru yang dipindahkan Batara Pasupati untuik dijadikan Sthana Betari Danuh (istana Dewi Danu). Pada waktu tertentu, seluruh umat Hindu dari berbagai daerah di Bali datang ke Batur menghaturkan Suwinih untuk mengusir bencana hama yang menimpa ladang mereka. Dengan menghantarkan suminih ini maka kawasan gunung Batur menjadi daerah yang subur.
 
-						Daerah yang dapat ditonjolkan sebagai objek wisata adalah kawah, kaldera dan danau. Terdapat aliran air dalam tanah yang mengalirkan air Danau Batur, yang muncul menjadi mata air di beberapa tempat di Bali dan dianggap sebagai "Tirta Suci"
+						Daerah yang dapat ditonjolkan sebagai objek wisata adalah kawah, kaldera dan danau. Terdapat aliran air dalam tanah yang mengalirkan air Danau Batur, yang muncul menjadi mata air di beberapa tempat di Bali dan dianggap sebagai "Tirta Suci".
 					</p>
 					<a href="#">Read More </a> >
 				</div>
@@ -60,5 +82,35 @@
 		</div>
 	</div>
 	<!-- sumber deskripsi dari wiki -->
+
+	<div class="lesson-wrapper">
+	    <div class="lessons">
+	        <div class="lesson">
+	            <div class="lesson-icon box">
+	                <p>TIPS</p>
+	            </div>
+	            <div class="lesson-icon box">
+	                <p>NEWS</p>
+	            </div>
+	            <div class="lesson-icon box">
+	                <p>BLOG</p>
+	            </div>
+	        </div>
+	    </div>
+	    <div class="color-bottom"></div>
+	</div>
+
+<!-- footer -->
+	<footer>
+      <div class="container">
+        <p1>Mountainering</p1>
+        <p2>Find Us At</p2>
+        	<ul>
+          		<li>Tentang</li>
+          		<li>Pelajaran</li>
+          		<li>Hubungi Kami</li>
+        	</ul>
+      </div>
+    </footer>
 </body>
 </html>
